--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.1.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^19.1.1",
+    "react-loader-spinner": "^8.0.0",
     "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
